--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,8 @@
     "silent": true
   },
   "builds": [
-    { "src": "index.js", "use": "@vercel/node" }
+    { "src": "index.js", "use": "@vercel/node" },
+    { "src": "cache/(.*)", "use": "@vercel/static" }
   ],
   "routes": [
     { "src": "/", dest: "cache/index.json" },
