Install module `pg`

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "request-promise-native": "1.0.9",
     "uuid": "^11.1.0",
     "jsonwebtoken": "^9.0.3",
-    "jwt-decode": "^4.0.0"
+    "jwt-decode": "^4.0.0",
+    "pg": "^8.18.0"
   },
   "repository": "https://github.com/walinejs/auth",
   "license": "MIT"
