--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "uuid": "^11.1.0",
     "jsonwebtoken": "^9.0.3",
     "jwt-decode": "^4.0.0",
-    "pg": "^8.18.0"
+    "pg": "^8.18.0",
+    "@neondatabase/serverless": "^1.0.2"
   },
   "repository": "https://github.com/walinejs/auth",
   "license": "MIT"
